# Arxiv-Daily

./: .gitignore  index.html  keywords.toml  main.py  pyproject.toml
.github/workflows/: python-app.yml  static.yml
.rye/py/cpython@3.10.13/: PYTHON.json
.rye/py/cpython@3.12.2/: PYTHON.json
.rye/py/cpython@3.12.2/install/include/python3.12/: pyconfig.h
templates/: index.html
