
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Li Yingping", email = "liyp.dl.cn@gmail.com"},
]
dependencies = [
    "arxiv>=1.4.7",
    "tomli>=2.0.1",
    "jinja2>=3.1.2",
    "ipykernel>=6.16.2",
    "translators>=5.7.0",
]
requires-python = ">=3.7,<3.11"
license = {text = "GPL-3"}

